--- a/_config (copy).yml
+++ b/_config (copy).yml
@@ -7,7 +7,7 @@
 
 # Site settings
 theme: jekyll-theme-dinky
-title: Top Technical Tips
+title: Top Technical Topics
 email: 
 description: > # this means to ignore newlines until "baseurl:"
   Musings on open source software development
