--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title: Top Technical Tips
 email: 
 description: > # this means to ignore newlines until "baseurl:"
   Musings on open source software development
-baseurl: "./" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://oldmill.cz" # the base hostname & protocol for your site
 twitter_username: libors
 github_username:  liborty
