--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-theme: jekyll-theme-slate
+theme: jekyll-theme-dinky
 title: Top Technical Tips
 email: 
 description: > # this means to ignore newlines until "baseurl:"
