--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@
 
 # Site settings
 theme: jekyll-theme-dinky
-title: Tip Top Tips
+title: TipTopTips
 email: 
 description: > # this means to ignore newlines until "baseurl:"
-  Mostly technical musings about open source software development
+  Mostly technical musings on open source software development
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://oldmill.cz" # the base hostname & protocol for your site
 twitter_username: libors
